05/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * The context menu now uses the common.add message

05/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed bug where the context menu wouldn't show for Processing Instruction
      and Comment Nodes outside of the root element.

05/06/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug where the tree view was catching NullPointerExceptions when
      it shouldn't have
    * The tree now shows the schema completion info.
    * Moved actions adding attributes and removing attributes into their own
      file

05/01/2005  Ian Lewis <IanLewis@member.fsf.org>

    * using the EnhancedMenu class in the tree view now.

04/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added support for adding entity reference nodes to the tree.

04/28/2005  Ian Lewis <IanLewis@member.fsf.org>
    
    * Updated the options panel to conform to the new OptionsPanel interface in
      jsXe core.
    * Made add, remove, and rename node actions into their own files and added
      them as actions for this plugin.

04/27/2005   Ian Lewis <IanLewis@member.fsf.org>

    * The Add Element context menu when using a DTD/Schema now has a 'More' menu
      that expands the menu.
    * Updated the EditTagDialog to use the Messages class
    * Changed the text pane to use a monospaced font

04/26/2005   Ian Lewis <IanLewis@member.fsf.org>

    * Added an Edit Tag Dialog to edit elements defined in an XML Schema.

04/18/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the context menu for the tree to not allow you to invalidate
      a document by adding a new node that isn't in the completion info.

04/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the context menu to add elements to show elements that are
      allowed as children based on the DTD/Schema

03/30/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed problem with entering new attributes after you reverse the order
      of the columns.
